# Laba_6

./: CMakeLists.txt  main.cpp
inc/: BoolVector.hpp
src/: BoolVector.cpp
